--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
           <div class="skill-row">
             <img class="skill-image img-right" src="https://www.flaticon.com/svg/static/icons/svg/103/103080.svg" alt="">
-            <h3>Competetive Programming</h3>
+            <h3>Competitive Programming</h3>
             <p>I love the sport as much as I love data structures and algorithm. Being two time ICPC regionalist and having participated at many prestegious competetions, 
                 I always thrive to achieve more and be better if not best in it.</p>
           </div>
